fixing white space at right of page

--- a/src/app/shared/components/notice-slider/notice-slider.component.css
+++ b/src/app/shared/components/notice-slider/notice-slider.component.css
@@ -57,3 +57,7 @@
     height: 100%;
     z-index: 2;
 }
+
+.container-fluid{
+  padding: 0;
+}
